--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,11 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+destination: docs
+keep_files:
+  - CNAME
+
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
