--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ theme_mode: # [light|dark]
 img_cdn: ""
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/mechpy-avatar.png"
+avatar: "/assets/mechpy-avatar-2.png"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
