--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,6 @@
 #   twitter: {twitter_of_author}
 #   url: {homepage_of_author}
 # -------------------------------------
-author:
+omar:
   name: Omar Bouchaara
   url: ttps://github.com/obouchaara/
