--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,4 +7,4 @@
 # -------------------------------------
 omar:
   name: Omar Bouchaara
-  url: ttps://github.com/obouchaara/
+  url: https://github.com/obouchaara/
