--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Africa/Casablanca
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: MechPy Docs # the main title
+title: MechPy # the main title
 
 tagline: Toolbox for Mechanical Engineering # it will display as the sub-title
 
